# 50-robotics

./: README.md
apps/livekit/: README.md  run-livekit.bat  setup.bat
apps/video-streaming-app/: .env  README.md  run.bat  (+2 more)
docs/: architecture.md  mqtt-topic-structure.md
five-zero-edge-adapter/: .env  package.json
k8s-emqx/: emqx.yaml
rdx-dashboard/: package.json
rdx-machine-perehereal-adapter/: .env  .gitignore  Dockerfile.prod  package.json
rdx-machine-simulator/: .gitignore  package-lock.json  package.json
s7-test/: package-lock.json  package.json
services/: docker-compose.yaml
services/five-zero-anomaly-detection/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/five-zero-anomaly-detection/tests/: conftest.py  test_file_video_stream.py  test_livekit_video_stream.py
services/five-zero-anomaly-detection/workspace_monitor/: config.py  main.py
services/five-zero-anomaly-detection/workspace_monitor/object_detector/: utils.py  yolo_v7.py
services/five-zero-anomaly-detection/workspace_monitor/object_detector/models/: common.py  experimental.py  yolo.py
services/five-zero-anomaly-detection/workspace_monitor/object_detector/models/utils/: datasets.py  general.py  letterbox.py
services/five-zero-anomaly-detection/workspace_monitor/utils/: __init__.py  stopwatch.py
services/five-zero-anomaly-detection/workspace_monitor/video_stream/: base.py  file_video_stream.py  livekit_video_stream.py
services/five-zero-anomaly-detection/workspace_monitor/workers/: workspace_monitor.py  workspace_state_publisher.py
(+243 files in other folders)
